feat: VIN-129 - corrigindo SonarLint